# INDIProperties

./: .gitignore  .gitmodules  CMakeLists.txt  INDIProperties.kdev4
src/: CMakeLists.txt  blob.cpp  blob.h  commons.h  indi_properties.h  indi_properties_map.h  indi_property.h  light.cpp  light.h  logger.h  number.cpp  number.h  switch.cpp  switch.h  text.cpp  text.h
test/: CMakeLists.txt  indi_functions_impl.h  number_test.cpp  properties_map_test.cpp  properties_test.cpp  switch_test.cpp  text_test.cpp
