ENABLE_TESTING()
cmake_minimum_required(VERSION 2.8.12)
project(indiproperties)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package(INDI REQUIRED)
include_directories(${INDI_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/src ${CMAKE_CURRENT_SOURCE_DIR}/gulinux-commons/)
add_subdirectory(src)
add_subdirectory(test)