if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/googletest/CMakeLists.txt")
  include(add_gtest)
  message("Found googletest, enabling testing")
  add_subdirectory(googletest)
  
  add_gtest(NAME switch_test SOURCES switch_test.cpp TYPE unit TARGET_LINK_LIBRARIES indi_properties indidriver)
  add_gtest(NAME number_test SOURCES number_test.cpp TYPE unit TARGET_LINK_LIBRARIES indi_properties indidriver)
  add_gtest(NAME text_test SOURCES text_test.cpp TYPE unit TARGET_LINK_LIBRARIES indi_properties indidriver)
  add_gtest(NAME properties_test SOURCES properties_test.cpp TYPE unit TARGET_LINK_LIBRARIES indi_properties indidriver)
  add_gtest(NAME properties_map_test SOURCES properties_map_test.cpp TYPE unit TARGET_LINK_LIBRARIES indi_properties indidriver)
else(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/googletest/CMakeLists.txt")
  message(WARNING "Testing enabled but gtest not found")
endif(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/googletest/CMakeLists.txt")
